Fix 1px bug on Safari
again..

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,7 @@ li a {
 .Spacer-Div-H35p-00AAA0 {
 	height:35px; 
 	background-color:#00AAA0; 
+	margin-top: -1px;
 }
 
 .Spacer-Div-H50p {
